Made project paths non absolute, so it compiles for everyone.
Added internal getModuleSignature
Added Address class for easing on signature scanning.
Added get and call virtual function.

--- a/CasualLibrary.vcxproj.filters
+++ b/CasualLibrary.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="include\Memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Address.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
